--- a/HTMLClassExerciseF16/web/styles/main.css
+++ b/HTMLClassExerciseF16/web/styles/main.css
@@ -2,24 +2,51 @@
 *{
     font-family: Arial, Verdana, sans-serif;
     font-size: 28px;
+   
+    
 }
+header{
+    background-image: linear-gradient(45deg,white,orange,black);
+    width: 820px;
+    margin: auto;
+    border-style: solid;
+    border-color: black;
+    box-shadow: 0px 0px 5px 5px;
+    
+}
+html {
+    height: 100%;
+    width: 100%;
+    background-image: url(../images/bats.gif);
+    background-repeat: repeat;
+}
+div.content {
+    padding: 10px;
+    width: 800px;
+    margin: 0px auto;
+    box-shadow: 0px 0px 5px 5px;
+    border-style: solid;
+    border-color: black;
+    background-color: white;
+    font-size: 28px;
+}
+
 #image {
     float: left;
 }
 #header {
     font-size: 32px;
     text-indent: 50px;
-    color: orange;
-    font-style: italic;
-    text-shadow: 2px 2px black;
+
     
 }
 #goblin {
     font-size: 22px;
-    text-indent: 50px;
+    text-indent: 138px;
 }
 body {
-    font-size: 28px;
+
+    
 }
 p {
     font-size: 20px;
@@ -56,7 +83,16 @@ b {
     font-size: 18px;
 }
 footer{
+    padding: 0px !important;
     text-align: center;
+    margin: auto;
+    height: 100%;
+    width: 820px;
+    border-style: solid;
+    border-color: black;
+    box-shadow: 0px 0px 5px 5px;
+    background-image: linear-gradient(45deg,black,orange,white);
+    
     
 }
 #copy {
