--- a/HTMLClassExerciseF16/web/styles/main.css
+++ b/HTMLClassExerciseF16/web/styles/main.css
@@ -2,6 +2,7 @@
 *{
     font-family: Arial, Verdana, sans-serif;
     font-size: 28px;
+    
    
     
 }
@@ -29,6 +30,10 @@ div.content {
     border-color: black;
     background-color: white;
     font-size: 28px;
+    
+}
+main {
+    position: relative; left: 150px; bottom: 10px;
 }
 
 #image {
@@ -45,27 +50,54 @@ div.content {
     text-indent: 138px;
 }
 body {
-
+  
     
 }
 p {
-    font-size: 20px;
+    font-size: 16px;
     
 }
 #welcome:first-letter{
     font-size: 80px;
 }
+welcome{
+    
+}
+text{
+   
+}
+
 li{
     margin: 10px 0;
 }
+nav {
+    position: absolute !important; left: 120px !important; top: 120px !important;
+    width: 160px;
+    display: inline !important;
+    margin: 0;
+    padding: 0;
+    margin-right: 10px;
+}
+#list {
+     position: absolute !important; right: 270px !important; bottom: -60px !important;
+    width: 160px;
+    display: inline !important;
+    margin: 0;
+    padding: 0;
+    margin-right: 10px;
+}
 a {
-    font-weight: bold;
+   font-weight: bold;
     color: orange;
    font-size: 20px;
    line-height: 100%;
 }
 a:hover{
     color: green;
+}
+#catpic {
+    list-style-type: none;
+    position: relative; left: -35px;
 }
 li {
     font-size: 20px;
@@ -77,16 +109,16 @@ li {
     font-size: 28px;
 }
 #guarp {
-    font-size: 18px;
+    font-size: 16px;
 }
 b {
-    font-size: 18px;
+    font-size: 16px;
 }
 footer{
     padding: 0px !important;
     text-align: center;
     margin: auto;
-    height: 100%;
+    height: 75px;
     width: 820px;
     border-style: solid;
     border-color: black;
@@ -97,4 +129,6 @@ footer{
 }
 #copy {
     font-size: 14px;
+    position: relative; bottom: -20px;
+    
 }
