--- a/HTMLClassExerciseF16/web/styles/main.css
+++ b/HTMLClassExerciseF16/web/styles/main.css
@@ -15,6 +15,9 @@ header{
   box-shadow: 0px 0px 5px 5px;
     
 }
+a.home{
+    color: orange !important;
+}
 ul.topNav {
     list-style-type: none;
     margin: 0;
